--- a/src/layouts/ProductList/ProductHeader/ProductHeader.scss
+++ b/src/layouts/ProductList/ProductHeader/ProductHeader.scss
@@ -4,7 +4,7 @@
 
 
     div.wrap-img-box {
-        background-image: url('https://s3-alpha-sig.figma.com/img/b80a/68b2/4857443438e2bed0873bf21efd96881c?Expires=1603670400&Signature=KlCAbv8k-15momDWFNzjtHzf47y94y-q-9TESaUQSxxLnIxmVTmhdxJEt6EAXdNm4xAqrH~mhGIjlpwnDXEoGqyTmRA6Z-XYPaSggJeOhg3A0rYBQQpBtNlf0RCoXPr1u-h3OoEstF5qfY1cd3qY4dNpj534eck1Wvq~lr0OqH-Jw5hjIcqjprvYe2urI0O-qb0nPfN3O0wkWFFpGTnbjawsx8Yk7iTCaxHjpYVgiWqz4~IP704-b0QpBPClKHC2wNjC6PMPGotBaqEEAd0GEzLwzTyqC7uHr80Ewut7tibA-kXd0ffgELJmtj-nZu0AudCkIlvhtQFiW5EN0rUmEQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA');
+        background-image: url('../../../assets/bg-img.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
